Harden local data and API boundaries